--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,22 @@
 {
   "extends": [
     "eslint:recommended",
-    "airbnb-base"
+    "airbnb-base",
+    "plugin:mocha/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": 2017
   },
-  "plugins": [],
+  "plugins": [
+    "mocha"
+  ],
   "root": true,
   "rules": {
     "class-methods-use-this": 0,
-    "import/extensions": 0
+    "import/extensions": 0,
+    "mocha/no-mocha-arrows": 0
+  },
+  "env": {
+    "mocha": true
   }
 }
