--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ph-locations",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Library of locations in the Philippines",
   "main": "build/index.js",
   "scripts": {
-    "build": "node -r esm src/build.js",
+    "build": "node -r esm -e \"import build from './src/build'; build(); console.log('Done!');\"",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npm run lint"
+    "test": "mocha",
+    "prepublish": "npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
@@ -28,14 +28,24 @@
     "url": "https://github.com/hyubs/ph-locations/issues"
   },
   "homepage": "https://github.com/hyubs/ph-locations#readme",
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/register": "^7.9.0",
     "axios": "^0.19.2",
+    "babel": "^6.23.0",
+    "chai": "^4.2.0",
     "cheerio": "^1.0.0-rc.3",
+    "dirty-chai": "^2.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2"
-  },
-  "dependencies": {
-    "esm": "^3.2.25"
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-mocha": "^6.3.0",
+    "esm": "^3.2.25",
+    "mocha": "^7.1.1",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0"
   }
 }
