--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   "root": true,
   "rules": {
     "class-methods-use-this": 0,
+    "func-names": 0,
     "import/extensions": 0,
     "mocha/no-mocha-arrows": 0
   },
