--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "ph-locations",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Library of locations in the Philippines",
   "main": "build/index.js",
   "scripts": {
-    "build": "node -r esm -e \"import build from './src/build'; build(); console.log('Done!');\"",
+    "build": "node -r esm -e \"import build from './src/build'; build();\"",
     "lint": "eslint .",
     "test": "mocha",
     "prepublish": "npm run lint && npm run test",
-    "check:diff": "node -r esm bin/diff.js"
+    "diff:iso3166": "node -r esm bin/diffISO3166.js",
+    "diff:psgc": "node -r esm bin/diffPSGC.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/register": "^7.9.0",
+    "async": "^3.2.0",
     "axios": "^0.19.2",
     "babel": "^6.23.0",
     "chai": "^4.2.0",
